2007-10-14  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>

	* configure.ac: Added 'be@latin' (Belarusian Latin) to ALL_LINGUAS

2007-10-08  Priit Laes  <plaes@svn.gnome.org>

	* configure.ac: Added 'et' (Estonian) to ALL_LINGUAS

2007-07-26  Dan Williams  <dcbw@redhat.com>

	Patch from Jon Escombe <lists@dresco.co.uk>

	* src/applet-dbus-info.c
		- (nmi_dbus_get_key_for_network): fix reconnection to LEAP networks
			to not ask for the password every time

2007-07-26  Dan Williams  <dcbw@redhat.com>

	Patch from <pcjc2@cam.ac.uk>

	* src/applet-dbus-info.c
		- (nmi_dbus_get_network_key_callback): handle the keyring not returning
			a key better (#449271)

2007-06-21  Dan Williams  <dcbw@redhat.com>

	* applet-dbus.c
		- (nma_dbus_filter): handle new WirelessEnabled signal

	* src/applet.c
		- s/stop_wireless_item/wireless_enabled_item/
		- (nma_enable_wireless_set_active): disable the Enable Wireless menu
			item when a hardware switch has disabled rf already

	* src/applet-dbus-devices.c
		- (nma_dbus_update_wireless_enabled_cb): handle hardware rf enabled
			status in method call return

2207-06-14  Christopher Aillon  <caillon@redhat.com>

	* src/applet.glade: (passphrase_required)
	Connect to a network, not log in.  (#372154)

2007-06-10  Dan Williams  <dcbw@redhat.com>

	* src/wso-private.h
		- Add prototype for wso_wpa_create_phase2_type_model().  Lack of it
		was causing the returned pointer to be cast to int, leading to segfaults
		on 64-bit platforms.  (gnome.org #435036)

	* src/wireless-security-option.c
		- (wso_wpa_create_phase2_type_model): num_items should be 5

2007-06-07  Dan Williams  <dcbw@redhat.com>

	Patch from Jon Escombe <lists@dresco.co.uk>

	* src/applet-dbus-info.c:
		- (nmi_dbus_get_key_for_network): don't ask for a new key if we
		have a WPA-EAP private key file, but try to get it from the
		keyring first.

2007-03-21  Pema Geyleg <pema.geyleg@gmail.com>

	* configure.ac: Added 'dz' to ALL_LINGUAS
