@@ -1,3 +1,9 @@
+2007-12-05  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (nma_show_info_cb): fix clicking the X on the info dialog
+			(gnome.org #394264)
+
 2007-10-14  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>
 
 	* configure.ac: Added 'be@latin' (Belarusian Latin) to ALL_LINGUAS
